# tinylm

./: README.md  pyproject.toml
.github/workflows/: ci-nvidia.yaml  ci.yaml
ci/: nvidia.py
tests/: config.yaml  conftest.py  test_config.py  test_context.py  test_dummy.py
tests/layers/: test_activation.py  test_layernorm.py  test_linear.py  test_rotary_embedding.py
tinylm/: config.py  context.py  testutil.py
tinylm/layers/: activation.py  base.py  layernorm.py  linear.py  rotary_embedding.py
