[project]
name = "tinylm"
version = "0.1.0"
description = "Implementation of Language Models from Scratch for Self-Educational Purposes"
readme = "README.md"
authors = [
    {name = "Chiwan Park", email = "chiwanpark@hotmail.com"},
]
requires-python = ">=3.12"
default-groups = []
dependencies = [
    "torch==2.6.0",
    "flashinfer-python==0.2.5",
    "transformers[torch]>=4.51.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "modal>=0.77.0",
    "mypy>=1.15.0",
    "poethepoet>=0.34.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
torch = {index = "torch"}
flashinfer = {index = "flashinfer"}
flashinfer-python = {index = "flashinfer"}

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "flashinfer"
url = "https://flashinfer.ai/whl/cu124/torch2.6"
explicit = true

[tool.poe.tasks]
_black = "black --line-length 100 tinylm/ ci/ tests/"
_black-check = "black --check --line-length 100 tinylm/ ci/ tests/"
_isort = "isort tinylm/ ci/ tests/"
_isort-check = "isort --check-only tinylm/ ci/ tests/"
formatting-check = ["_black-check", "_isort-check"]
format = ["_black", "_isort"]
lint = "ruff check tinylm/ ci/ tests/"
typetest = "mypy tinylm/ ci/ tests/"
test = "pytest"

[tool.isort]
profile = "black"

[tool.ruff]
lint.select = [
    "E",
    "W",
    "F",
    "C",
    "B",
    "T20",
]
lint.ignore = [
    "E501",
]
target-version = "py312"
