[project]
name = "tinylm"
version = "0.1.0"
description = "Implementation of Language Models from Scratch for Self-Educational Purposes"
readme = "README.md"
authors = [
    {name = "Chiwan Park", email = "chiwanpark@hotmail.com"},
]
requires-python = ">=3.12"
default-groups = []
dependencies = [
    "jax>=0.8.0",
    "flax>=0.10.4",
    "optax>=0.2.4",
    "chex>=0.1.8",
    "transformers>=4.51.3",
    "pydantic-settings>=2.9.1",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]>=0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "modal>=0.77.0",
    "mypy>=1.15.0",
    "poethepoet>=0.34.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.poe.tasks]
_black = "black --line-length 120 tinylm/ ci/ tests/"
_black-check = "black --check --line-length 120 tinylm/ ci/ tests/"
_isort = "isort tinylm/ ci/ tests/"
_isort-check = "isort --check-only tinylm/ ci/ tests/"
formatting-check = ["_black-check", "_isort-check"]
format = ["_black", "_isort"]
lint = "ruff check tinylm/ ci/ tests/"
typetest = "mypy tinylm/ ci/ tests/"
test = "pytest"

[tool.isort]
profile = "black"

[tool.ruff]
lint.select = [
    "E",
    "W",
    "F",
    "C",
    "B",
    "T20",
]
lint.ignore = [
    "E501",
]
target-version = "py312"
